<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_kulrang"
    tools:context=".AdderFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.08">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/default_kulrang"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cacel_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="0dp"
                android:backgroundTint="@color/default_kulrang"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                tools:ignore="UnusedAttribute">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bekor_qilish"
                    android:textSize="15sp"
                    android:textColor="@color/default_oq"
                    android:textStyle="bold"
                    android:clickable="false"
                    android:fontFamily="sans-serif-light"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/save_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="0dp"
                android:backgroundTint="@color/default_kulrang"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                tools:ignore="UnusedAttribute">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/saqlash"
                    android:textSize="15sp"
                    android:clickable="false"
                    android:textColor="@color/yellow"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:cardElevation="0dp"
        app:layout_constraintHeight_percent="0.3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/default_kulrang"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consta1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/default_kulrang"
                app:layout_constraintRight_toLeftOf="@id/ikta_nuqta">

                <NumberPicker
                    android:id="@+id/num_picker1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:selectionDividerHeight="0dp"
                    android:soundEffectsEnabled="true"
                    tools:targetApi="q" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/ikta_nuqta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ikta_nuqta"
                android:textSize="40sp"
                android:textColor="@color/default_oq"
                app:layout_constraintLeft_toRightOf="@id/consta1"
                app:layout_constraintRight_toLeftOf="@id/consta2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consta2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="@id/ikta_nuqta"
                android:background="@color/default_kulrang"
                app:layout_constraintRight_toRightOf="parent">


                <NumberPicker
                    android:id="@+id/num_picker2"
                    android:layout_width="match_parent"
                    android:selectionDividerHeight="0dp"
                    android:soundEffectsEnabled="true"
                    android:layout_height="match_parent"
                    tools:targetApi="q" />



            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.005"
                app:cardElevation="0dp"
                android:backgroundTint="@color/default_oq"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="UnusedAttribute" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.008"
                android:backgroundTint="@color/default_oq"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="end"
                app:cardElevation="0dp"
                tools:ignore="UnusedAttribute" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/default_kulrang"
        app:layout_constraintTop_toBottomOf="@id/card2"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_days_of_the_week"
            android:textColor="@color/default_yashil"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/default_kulrang"
            app:cardElevation="0dp"
            tools:ignore="UnusedAttribute">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/haf_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/d"
                        android:textColor="@color/default_oq"
                        android:padding="10dp"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:id="@+id/haf_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/default_oq"
                        android:text="@string/tu"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>

                    <TextView
                        android:id="@+id/haf_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/default_oq"
                        android:text="@string/we"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>

                    <TextView
                        android:id="@+id/haf_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/default_oq"
                        android:text="@string/th"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>

                    <TextView
                        android:id="@+id/haf_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/default_oq"
                        android:text="@string/fr"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>


                    <TextView
                        android:id="@+id/haf_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/default_oq"
                        android:text="@string/sa"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>


                    <TextView
                        android:id="@+id/haf_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/default_oq"
                        android:text="@string/su"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>



                </LinearLayout>
            </HorizontalScrollView>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/tebranish_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/default_kulrang"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="0dp"
            tools:ignore="UnusedAttribute">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/signal_paytida_tebranish"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/default_yashil"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="20sp"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_compat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:thumb="@drawable/thumb"
                    app:track="@drawable/track"
                    app:showText="true"
                    android:textOn="@string/on"
                    android:textOff="@string/off"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/default_kulrang"
            app:cardElevation="0dp"
            tools:ignore="UnusedAttribute" >

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                ads:adSize="LARGE_BANNER"
                ads:adUnitId="@string/ID_BANNER2">
            </com.google.android.gms.ads.AdView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>